<resources>
    <string name="app_name">Tarefa</string>
    <string name="titulo_tela_login">Login</string>
    <string name="titulo_janela_detalhe_produto">Detalhe do Produto</string>
    <string name="title_activity_cadastro">Cadastro</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Barcode -->
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="sim">"Sim"</string>
    <string name="nao">"Não"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Vendedor</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_nav_carrinho">Carrinho</string>
    <string name="menu_nav_lista_de_clientes">Clientes</string>
    <string name="menu_nav_produto_admin">Produto</string>
    <string name="menu_nav_cliente_admin">Cliente</string>
    <string name="menu_nav_sobre">Sobre</string>
    <string name="menu_nav_sair">Sair</string>
    <string name="toast_carrinho_esta_vazio">O carrinho está vazio</string>
    <string name="titulo_alertDialogSimNao">Ops! Atenção</string>
    <string name="mensagem_se_voce_sair">Se você sair os dados do pedido serão perdidos. Deseja sair?</string>
    <string name="foto_do_produto">Foto do Produto</string>
    <string name="label_codigo_de_barras">Código</string>
    <string name="hint_codigo_de_barras">Insira o código</string>
    <string name="label_nome">Nome</string>
    <string name="hint_nome_produto">Insira o nome do produto</string>
    <string name="label_descricao">Descrição</string>
    <string name="hint_descricao_produto">Insira uma descrição</string>
    <string name="label_valor">Valor</string>
    <string name="hint_valor">Valor do produto</string>
    <string name="label_quantidade">Quantidade</string>
    <string name="hint_quantidade_digite">Quantidade em estoque</string>
    <string name="bt_inserir">Inserir</string>
    <string name="toast_otimo_produto_cadastrado">Produto cadastrado com sucesso!</string>
    <string name="toast_produto_nao_cadastrado">Produto não cadastrado</string>
    <string name="toast_todos_campos_devem_preenchidos">Todos os campos devem ser preenchidos</string>
    <string name="texto_sobre">
        Aplicativo desenvolvido na disciplina de Programação para Dispositivos Móveis, no
        curso Superior de Tecnologia em Sistemas para Internet, do <b>Instituto Federal de
        Educação, Ciência e Tecnologia Sul-rio-grandense (IFSul)</b>.</string>
    <string name="foto_do_cliente">Foto do cliente</string>
    <string name="hint_nome_cliente">Digite o nome do cliente</string>
    <string name="label_cpf">CPF</string>
    <string name="hint_cpf">Digite o cpf do cliente</string>
    <string name="toast_otimo_cliente_cadastrado">Cliente cadastrado com sucesso!</string>
    <string name="toast_cliente_nao_cadastrado">Cliente não foi cadastrado!</string>
    <string name="toast_produto_no_carrinho">Este produto já está no carrinho!</string>
</resources>