<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item android:title="Vendas">
            <menu>
                <item
                    android:id="@+id/nav_carrinho"
                    android:icon="@drawable/ic_cart_2_48"
                    android:title="@string/menu_nav_carrinho" />
                <item
                    android:id="@+id/nav_clientes"
                    android:icon="@drawable/ic_group_48"
                    android:title="@string/menu_nav_lista_de_clientes" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="Administração">
            <menu>
                <item
                    android:id="@+id/nav_produto_adminstracao"
                    android:icon="@drawable/ic_product_48"
                    android:title="@string/menu_nav_produto_admin" />
                <item
                    android:id="@+id/nav_cliente_administracao"
                    android:icon="@drawable/ic_group_48"
                    android:title="@string/menu_nav_cliente_admin" />
            </menu>
        </item>
    </group>
    <group android:checkableBehavior="single">
        <item android:title="App">
            <menu>
                <item
                    android:id="@+id/nav_sobre"
                    android:icon="@drawable/ic_report_3_48"
                    android:title="@string/menu_nav_sobre" />
                <item
                    android:id="@+id/nav_sair"
                    android:icon="@drawable/ic_door_8_48"
                    android:title="@string/menu_nav_sair" />
            </menu>
        </item>
    </group>

</menu>
